--- a/src/v00v.Views/Explorer/ItemControl.xaml
+++ b/src/v00v.Views/Explorer/ItemControl.xaml
@@ -11,13 +11,13 @@
                   Data="F1 M 46.479,0.587 C 45.064,2.731 43.659,4.881 42.233,7.018 C 34.590,18.476 26.954,29.938 19.287,41.380 C 16.541,45.479 16.412,45.484 13.178,42.022 C 9.187,37.750 5.308,33.373 1.255,29.163 C -1.890,25.897 1.704,24.784 3.060,22.970 C 4.534,20.998 6.058,20.783 7.758,22.862 C 9.236,24.668 11.106,26.173 12.457,28.058 C 14.160,30.435 15.412,30.149 17.309,28.225 C 25.700,19.712 34.212,11.316 42.688,2.886 C 43.681,1.898 44.725,0.961 45.746,0.000 C 45.990,0.196 46.235,0.391 46.479,0.587 Z"
                   Stretch="Fill"
                   Fill="Green" 
-                  IsVisible="{Binding Path=WatchState, Converter={x:Static converters:EnumToBooleanConverter.Instance}, ConverterParameter={x:Static enums:WatchState.Watched}, Mode=OneWay}" 
+                  IsVisible="{Binding Path=WatchState, Converter={x:Static converters:EnumToBooleanConverter.s_instance}, ConverterParameter={x:Static enums:WatchState.Watched}, Mode=OneWay}" 
                   />
             <Path Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" 
                   Data="M10,0 C4.5,0 0,4.5 0,10 C0,15.5 4.5,20 10,20 C15.5,20 20,15.5 20,10 C20,4.5 15.5,0 10,0 L10,0 Z M10,18 C5.6,18 2,14.4 2,10 C2,5.6 5.6,2 10,2 C14.4,2 18,5.6 18,10 C18,14.4 14.4,18 10,18 Z M10.5,5 L9,5 L9,11 L14.2,14.2 L15,12.9 L10.5,10.2 L10.5,5 Z"
                   Stretch="Fill"
                   Fill="DarkMagenta" 
-                  IsVisible="{Binding Path=WatchState, Converter={x:Static converters:EnumToBooleanConverter.Instance}, ConverterParameter={x:Static enums:WatchState.Planned}, Mode=OneWay}"
+                  IsVisible="{Binding Path=WatchState, Converter={x:Static converters:EnumToBooleanConverter.s_instance}, ConverterParameter={x:Static enums:WatchState.Planned}, Mode=OneWay}"
             />
             <Button Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" Width="51" Height="51" VerticalAlignment="Top"
                     BorderThickness="0" Padding="0" Background="Transparent" BorderBrush="Transparent"
@@ -28,10 +28,10 @@
                        VerticalAlignment="Center" HorizontalAlignment="Center" 
                        />
             </Button>
-            <Panel Grid.Row="0" Grid.RowSpan="3" Grid.Column="1" Grid.ColumnSpan="2" Background="#E4D6FE" Opacity="0.05" IsVisible="{Binding Path=SyncState, Converter={x:Static converters:EnumToBooleanConverter.Instance}, ConverterParameter={x:Static enums:SyncState.Notset}, Mode=TwoWay}"/>
-            <Panel Grid.Row="0" Grid.RowSpan="3" Grid.Column="1" Grid.ColumnSpan="2" Background="#90EE90" Opacity="0.3" IsVisible="{Binding Path=SyncState, Converter={x:Static converters:EnumToBooleanConverter.Instance}, ConverterParameter={x:Static enums:SyncState.Added}, Mode=TwoWay}"/>
-            <Panel Grid.Row="0" Grid.RowSpan="3" Grid.Column="1" Grid.ColumnSpan="2" Background="#FBACA8" Opacity="0.3" IsVisible="{Binding Path=SyncState, Converter={x:Static converters:EnumToBooleanConverter.Instance}, ConverterParameter={x:Static enums:SyncState.Unlisted}, Mode=TwoWay}"/>
-            <Panel Grid.Row="0" Grid.RowSpan="3" Grid.Column="1" Grid.ColumnSpan="2" Background="#CD3C2E" Opacity="0.3" IsVisible="{Binding Path=SyncState, Converter={x:Static converters:EnumToBooleanConverter.Instance}, ConverterParameter={x:Static enums:SyncState.Deleted}, Mode=TwoWay}"/>
+            <Panel Grid.Row="0" Grid.RowSpan="3" Grid.Column="1" Grid.ColumnSpan="2" Background="#E4D6FE" Opacity="0.05" IsVisible="{Binding Path=SyncState, Converter={x:Static converters:EnumToBooleanConverter.s_instance}, ConverterParameter={x:Static enums:SyncState.Notset}, Mode=TwoWay}"/>
+            <Panel Grid.Row="0" Grid.RowSpan="3" Grid.Column="1" Grid.ColumnSpan="2" Background="#90EE90" Opacity="0.3" IsVisible="{Binding Path=SyncState, Converter={x:Static converters:EnumToBooleanConverter.s_instance}, ConverterParameter={x:Static enums:SyncState.Added}, Mode=TwoWay}"/>
+            <Panel Grid.Row="0" Grid.RowSpan="3" Grid.Column="1" Grid.ColumnSpan="2" Background="#FBACA8" Opacity="0.3" IsVisible="{Binding Path=SyncState, Converter={x:Static converters:EnumToBooleanConverter.s_instance}, ConverterParameter={x:Static enums:SyncState.Unlisted}, Mode=TwoWay}"/>
+            <Panel Grid.Row="0" Grid.RowSpan="3" Grid.Column="1" Grid.ColumnSpan="2" Background="#CD3C2E" Opacity="0.3" IsVisible="{Binding Path=SyncState, Converter={x:Static converters:EnumToBooleanConverter.s_instance}, ConverterParameter={x:Static enums:SyncState.Deleted}, Mode=TwoWay}"/>
             <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding Title, Mode=OneWay}" Margin="5,0,0,0" TextWrapping="NoWrap" VerticalAlignment="Center" FontSize="19" />
             <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal">
                 <Border BorderBrush="#FF000000" BorderThickness="0.3" CornerRadius="3" Margin="5,0,0,2" VerticalAlignment="Bottom">
